Bugfixes so all languages work

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,28 @@
-requests~=2.24.0
-txrequests~=0.9.6
-threads
-datetimerange~=1.0.0
-schedule~=0.6.0
-lxml~=4.5.2
+attrs==19.3.0
+Automat==20.2.0
+certifi==2020.6.20
+chardet==3.0.4
+constantly==15.1.0
+DateTimeRange==1.0.0
+ffmpeg==1.4
+hyperlink==19.0.0
+idna==2.10
+incremental==17.5.0
+lxml==4.5.2
+mbstrdecoder==1.0.0
+PyHamcrest==2.0.2
+python-dateutil==2.8.1
+pytube3==9.6.4
+pytz==2020.1
+requests==2.24.0
+requests-threads==0.1.1
+schedule==0.6.0
+six==1.15.0
+tinydb==4.1.1
+Twisted==20.3.0
+txrequests==0.9.6
+typepy==1.1.1
+typing-extensions==3.7.4.2
+urllib3==1.25.10
+youtube-dl==2020.7.28
+zope.interface==5.1.0
